<resources>
    <string name="app_name">HelloAndroid</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="orange_textview">This is an orange TextView</string>
    <string name="green_textview">This is a green TextView</string>
    <string name="blue_textview">This is a blue TextView</string>
    <string name="blue_button">This is Blue Button</string>
    <string name="green_button">This is a Green Button</string>
    <string name="this_is_an_edittext">This is an EditText</string>
    <string name="this_is_a_new_edittext">This is a New EditText</string>
    <string name="auto_backup">Auto Backup</string>
    <string name="notify_me">Notify Me :)</string>
    <string name="radio_button_1">Radio button 1</string>
    <string name="radio_button_2">Radio button 2</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="i_accept_t_amp_c"><![CDATA[I accept T&C]]></string>
    <string name="hello_android_fundamentals">Hello Android Fundamentals</string>
    <string name="start_second_activity">Start Second Activity</string>
    <string name="finish_second_activity">Close Second Activity</string>

    <array name="data">
        <item>"Data 1"</item>
        <item>"Data 2"</item>
        <item>"Data 3"</item>
    </array>
    <string name="title_activity_example1">Example1Activity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_example3">Example3Activity</string>
    <string name="title_activity_example4">Example4Activity</string>
    <string name="title_activity_master">MasterActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
</resources>
