<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/orangeTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/orange"
            android:gravity="center"
            android:text="@string/orange_textview"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/greenTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/green"
            android:gravity="center"
            android:text="@string/green_textview"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/blueTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/blue"
            android:gravity="center"
            android:text="@string/blue_textview"
            android:textColor="@color/white"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <Button
            android:id="@+id/blue_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/blue"
            android:text="@string/blue_button"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_launcher_background" />

        <Button
            android:id="@+id/green_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/green"
            android:text="@string/green_button"
            android:textColor="@color/white"
            android:textSize="30sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/first_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yellow"
        android:hint="@string/this_is_an_edittext"
        android:paddingTop="20dp"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/second_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yellow"
        android:hint="@string/this_is_a_new_edittext"
        android:paddingTop="20dp"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <CheckBox
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/notify_me" />

            <Switch
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/auto_backup" />

        </LinearLayout>

        <View
            android:id="@+id/first_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />

        <RatingBar
            android:id="@+id/rating_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:rating="4"
            android:stepSize="1" />

        <View
            android:id="@+id/second_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <RadioButton
                android:id="@+id/radio_button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_button_1"
                android:textSize="25sp" />

            <RadioButton
                android:id="@+id/radio_button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_button_2"
                android:textSize="25sp" />

        </RadioGroup>
    </LinearLayout>
</LinearLayout>