<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/mid_size">

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="@dimen/mid_size"
        android:text="@string/login"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/mid_text_size" />

    <EditText
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/mid_size"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/phone_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/mid_size"
        android:hint="@string/phone"
        android:inputType="phone" />

    <CheckBox
        android:id="@+id/checkbox_tc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mid_size"
        android:text="@string/i_accept_t_amp_c" />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mid_size"
        android:layout_marginRight="@dimen/mid_size"
        android:background="@color/colorPrimary"
        android:onClick="onLoginClicked"
        android:text="@string/login" />
</LinearLayout>